# timetable

./: CMakeLists.txt  Doxyfile  README.txt
doc/: algorithms.dox  get_keywords.dox  mainpage.dox
include/: get_keywords.hpp  timetable.hpp
methods/: get_keywords_methods.cpp  main.cpp  methods.hpp
tests/: generator.cpp  generator.h  get_keyword_test.cpp  main.cpp  test.cpp  test.hpp  test_core.hpp  timetable_test.cpp
